--- a/imooc-ad-service/pom.xml
+++ b/imooc-ad-service/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>ad-common</module>
+        <module>ad-search</module>
     </modules>
     <packaging>pom</packaging>
 </project>
