--- a/imooc-ad-service/pom.xml
+++ b/imooc-ad-service/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>ad-common</module>
         <module>ad-search</module>
+        <module>ad-dashboard</module>
     </modules>
     <packaging>pom</packaging>
 </project>
