--- a/imooc-ad-service/ad-sponsor/src/main/resources/application.yml
+++ b/imooc-ad-service/ad-sponsor/src/main/resources/application.yml
@@ -25,6 +25,6 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://server1:8000/eureka/
+      defaultZone: http://localhost:8000/eureka/
 
 
